crates/cosmon-cli/tests/snapshots/help__demo.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Demo — one-command end-to-end chatbot surface (first-contact experience)

Usage: cs demo [OPTIONS]

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)

      --prompt <PROMPT>
          Skip the interactive prompt; use this text as the demo input

      --formula <FORMULA>
          Force a specific formula instead of auto-classifying.
          
          The named formula must already exist under `.cosmon/formulas/`. No new formulas are registered by `cs demo`.

  -v, --verbose
          Enable verbose output

      --json
          Output in JSON format

      --no-teardown
          Skip the final `cs done` teardown — useful for debugging.
          
          When set, the molecule remains Completed (or Collapsed) but its worktree, tmux session, and fleet worker are left intact for post-mortem inspection.

      --timeout <TIMEOUT>
          Maximum seconds to wait for the molecule to reach a terminal state.
          
          Mirrors the `cs wait --timeout` default so `cs demo` does not silently allow a runaway demo to hang the operator's terminal.
          
          [default: 600]

      --adapter <NAME>
          Worker-Spawn Port Adapter to dispatch (ADR-079 / ADR-097 / ADR-106).
          
          Mirrors `cs tackle --adapter`: when set, the value is threaded through to the `cs tackle` invocation that `cs demo` spawns under the hood, so the demo cycle can exercise any registered Adapter (e.g. `llama-cpp`, `claude`, `aider`, `openai-chat`). Optional — the default resolution path (`.cosmon/config.toml::[adapters.default]` → built-in [`BUILTIN_FLOOR_ADAPTER`](cosmon_core::config::BUILTIN_FLOOR_ADAPTER), currently `"local"`, the Ollama-backed in-process loop — never Claude) is preserved when the flag is omitted.
          
          Per ADR-106 the canonical name for the in-process llama.cpp adapter is `llama-cpp`; the legacy alias `llama` is accepted at the CLI seam (canonicalises via `cs tackle`'s `validate_adapter_name`).

      --model <MODEL_ID>
          Model to run, threaded verbatim to `cs tackle --model` (COSMON #23).
          
          For the default `local` adapter this is the Ollama model tag, e.g. `--model qwen2.5:32b` or `--model llama3.2:3b`. It must already be pulled (`ollama pull <id>`); the dispatch preflight refuses rather than collapsing a molecule against a model the daemon cannot serve.
          
          Precedence for the local adapter, highest first: this flag → formula-step `model =` pin → `[adapters.local].default_model` in `.cosmon/config.toml` → `COSMON_LOCAL_MODEL` → the built-in default `qwen3:8b`. Every local dispatch prints the model it resolved and its origin on stderr, so the effective choice is never a guess. Point the adapter at another daemon with `[adapters.local].base_url`, `COSMON_LOCAL_BASE_URL`, or the native `OLLAMA_HOST`. Full guide: `docs/guides/local-model-selection.md`.

  -h, --help
          Print help (see a summary with '-h')

EXAMPLES:
  cs demo                              # interactive prompt → full cycle
  cs demo --prompt "Implement X"       # skip TTY, classify as task-work
  cs demo --formula deep-think --prompt "Is X viable?"
  cs demo --adapter llama-cpp --prompt "Hello, world"  # route through llama.cpp
  cs demo --no-teardown                # leave worktree intact for inspection

Runs nucleate → tackle → wait → done in one shot. All artefacts persist.

The --adapter flag is threaded to `cs tackle` so the demo cycle exercises
any registered Adapter (claude, aider, openai-chat, llama-cpp, …). Per
ADR-106 the legacy alias `llama` canonicalises to `llama-cpp` at the
CLI seam — both invocations route to the same in-process adapter.
