crates/cosmon-cli/tests/snapshots/help__deps.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Deps — show blocking, lineage, and citation links for a molecule

Usage: cs deps [OPTIONS] <MOLECULE>

Arguments:
  <MOLECULE>  Molecule ID (exact or prefix) whose dependencies should be shown

Options:
      --config <PATH>  Path to configuration file
      --transitive     Walk the full transitive closure instead of only direct edges
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help

EXAMPLES:
  cs deps <mol>                       # blocking, lineage, citation links
  cs deps <mission> --transitive      # planned children and pipeline closure
  cs --json deps <mol>                # for scripting

Walks `Blocks` / `BlockedBy`, `DecayProduct` / `DecayedFrom`, and citation links.
Only `BlockedBy` is a completion prerequisite; a planner can freeze after
verification while its lineage-linked first child becomes dispatchable.
