crates/cosmon-cli/tests/snapshots/help__doctor.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Doctor — diagnostic probes (whisper channel, …)

Usage: cs doctor [OPTIONS] <COMMAND>

Commands:
  whisper      Probe the whisper channel of a molecule's assigned worker
  leaks        Scan tracked files for leaked secrets and non-public state (blocking)
  worktrees    Audit `.worktrees/` for perm/symlink/untracked hazards
  mcp          Audit MCP servers registered in the configured service registry
  deps         Flag unpinned or mutable dependency declarations
  gitignore    Check that `.cosmon/.gitignore` tracks the archive it claims to
  supervision  Detect binaries supervised by both cosmon and a `LaunchAgent`
  security     Run every security probe and aggregate findings

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
