crates/cosmon-cli/tests/snapshots/help__doctor_supervision.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Detect binaries supervised by both cosmon and a `LaunchAgent`

Usage: cs doctor supervision [OPTIONS]

Options:
      --config <PATH>
          Path to the state directory (default: the galaxy's .cosmon/state/)
      --patrols <PATROLS>
          Override the patrols config (`~/.config/cosmon/patrols.toml`)
      --daemons <DAEMONS>
          Override the daemons config (`~/.config/cosmon/daemons.toml`)
  -v, --verbose
          Enable verbose output
      --json
          Output in JSON format
      --launch-agents-dir <LAUNCH_AGENTS_DIR>
          Override the LaunchAgents directory to scan
  -h, --help
          Print help
