crates/cosmon-cli/tests/snapshots/help__doctor_whisper.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Probe the whisper channel of a molecule's assigned worker

Usage: cs doctor whisper [OPTIONS] <MOLECULE_ID>

Arguments:
  <MOLECULE_ID>  Molecule ID (full or unambiguous prefix)

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
