crates/cosmon-cli/tests/snapshots/help__doctor_worktrees.snap
---
source: crates/cosmon-cli/tests/help_goldens.rs
expression: stdout
---
Audit `.worktrees/` for perm/symlink/untracked hazards

Usage: cs doctor worktrees [OPTIONS]

Options:
      --config <PATH>  Path to the state directory (default: the galaxy's .cosmon/state/)
      --root <ROOT>    Override the project root (default: git top-level)
  -v, --verbose        Enable verbose output
      --json           Output in JSON format
  -h, --help           Print help
